--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
         </activity>
         <activity android:name=".SignUpActivity" android:exported="false" />
 
+        <activity android:name=".FaceRegisterActivity" android:exported="false" />
+        <activity android:name=".FaceVerifyActivity" android:exported="false" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
