phase 1 of forgot password feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,9 +31,20 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+
         <activity
             android:name=".LoginActivity"
-            android:exported="false" />
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="dawnasyon" android:host="reset-callback" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".SplashActivity"
             android:exported="true">
@@ -42,10 +53,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUpActivity" android:exported="false" />
 
+        <activity android:name=".SignUpActivity" android:exported="false" />
         <activity android:name=".FaceRegisterActivity" android:exported="false" />
         <activity android:name=".FaceVerifyActivity" android:exported="false" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
